# tiling-problem

./: README.md  pyproject.toml
notebooks/: playground.ipynb
src/tiling/: __init__.py  simple_cpsat_solver.py  simple_tiling_instance.py  visualize.py
